# video_classifier

./: .gitignore  feature_extractor.py  main.py  multimodal.ipynb  notebook.ipynb  pyproject.toml  setup_data.py  start_jupyter.sh  yt8m_classifier.ipynb  yt8m_explorer.ipynb  yt8m_stage2_eda (1).ipynb  yt8m_stage2_eda.ipynb  yt8m_stage3_preprocessing.ipynb  yt8m_stage4_model.ipynb  yt8m_stage5_training.ipynb  yt8m_stage6_inference.ipynb  yt8m_stage7_inference.ipynb
data/embeddings/: -5t-l-Owk1U.npz  -AVxK-ZeduA.npz  -AvSNyUvRVs.npz  -F0Tw-w3gF4.npz  -HDWD-2j-dg.npz  -INiw-cVMjs.npz  -JIk6-dAwWo.npz  -KOI1-JbAZ0.npz  -NJLP-EE0E4.npz  -Qkvq-iFey0.npz  -RkvAyW4vuM.npz  -UXEO-TEE44.npz  -Y43Z-cpYic.npz  -fcYu-oNI2Y.npz  -iFE1-ooOyQ.npz  -j-37-hDAoU.npz  -jj42-Qy5mc.npz  -kJ5b-l36J4.npz  -oXka-yhvRQ.npz  -uQVa-ceRds.npz  -yqnC-yMzEc.npz  046r-RBfttc.npz  061a-kTVlzk.npz  0Au5-4UDHco.npz  0Hwe-t6U6e4.npz  0IcB-1Hd0dk.npz  0RjY-hsYJQ4.npz  0TG3-9e32n4.npz  0TW3-1jRLOc.npz  0ZHn-FnT5GU.npz  0bKj-om_sd4.npz  0d_q-2HqjUg.npz  0deq-VpOIJE.npz  0mAe-jwIuFk.npz  0sj9-ok3r-w.npz  0yJS-W5yyaU.npz  1-PhoeBfnsw.npz  113L-suj6mc.npz  14gO-UQw1WA.npz  18KP-CUjalw.npz  (+910 more)
scripts/: extract_features.py
yt8m_new/: 01_parse_frame_level.ipynb  02_eda.ipynb  03_preprocessing.ipynb  04_models.ipynb  05_training.ipynb  06_inference.ipynb
yt8m_old/: yt8m_classifier.ipynb  yt8m_explorer.ipynb  yt8m_stage2_eda.ipynb  yt8m_stage3_preprocessing.ipynb  yt8m_stage4_model.ipynb  yt8m_stage5_training.ipynb  yt8m_stage6_inference.ipynb
